--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "eject": "react-scripts eject",
     "deploy": "npm run build&&gh-pages -d build"
   },
-  "homepage": "https://github.com/greggocabral/react-ecommerce",
+  "homepage": "https://greggocabral.github.io/react-ecommerce",
   "devDependencies": {
     "gh-pages": "^1.1.0"
   }
